Fixed nav alignment on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -70,6 +70,9 @@
     flex-direction: column;
     align-items: center;
   }
+  li {
+    margin-right: 0;
+  }
   #footer {
     flex-direction: column;
   }
